fix: background color of the default button on dark mode

--- a/src/theme.module.less
+++ b/src/theme.module.less
@@ -59,8 +59,8 @@ html {
     --footer-background: #1e202c;
     --darker-background: #313545;
 
-    --button-default-bg: #ffffff;
-    --button-default-color: #000;
+    --button-default-bg: #1e202c;
+    --button-default-color: #fff;
     --button-primary-bg: #0057ff;
     --button-primary-color: #fff;
     --button-light-bg: #313545;
